--- a/TestPiCarreWeb/Home.css
+++ b/TestPiCarreWeb/Home.css
@@ -10,6 +10,7 @@
 }
 
 #content-main {
+    font-family: Calibri;
     background: #fff;
     position: fixed;
     top: 0;
@@ -17,10 +18,14 @@
     right: 0;
     bottom: 0;
     overflow: auto;
+    text-align: center;
 }
 
 .padding {
+    display: inline-block;
     padding: 15px;
+    width: 250px;
+    text-align: left;
 }
 
 .operator-block {
@@ -30,12 +35,44 @@
     width: 50px;
     font-size: 11px;
     border: 1px solid #bdbdbd;
-    margin-right: 2px;
+    margin-top: 4px;
+    border-radius: 4px;
 }
 
-.operator-block input[type="image"] {
+.operator-block img {
     width: 23px;
     padding: 3px;
+}
+
+.title {
+    text-align: center;
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    font-size: 13px;
+    color: #a1a1a1;
+}
+
+.titlediv {
+    margin-top: -35px;
+    float: left;
+    width: 5%;
+}
+
+.category {
+    width: 100%;
+    height: 100%;
+}
+
+.buttons {
+    float: left;
+    margin-left: 14px;
+    padding-left: 4px;
+    border-top: 1px solid #a1a1a1;
+    border-left: 1px solid #a1a1a1;
+    width: 95%;
 }
 
 #content-numbers {
